efactor: align API/domain contracts, enable streaming downloads, update Mongo indexes and tests